# mutx

./: CHANGELOG.md  Cargo.toml  README.md  atomic-write-cli-prd.md  cliff.toml  dist-workspace.toml  release.toml
.github/workflows/: ci.yml  release.yml
docs/: production-hardening-summary.md
docs/plans/: 2026-01-25-atomic-write-cli.md  2026-01-25-automated-release-workflow-design.md  2026-01-25-automated-release-workflow.md  2026-01-25-production-hardening.md  2026-01-25-security-hardening-design.md  2026-01-25-security-hardening-implementation.md  2026-01-26-housekeep-safety-fixes-design.md  2026-01-26-housekeep-safety-fixes-implementation.md  2026-01-26-post-release-fixes-design.md  2026-01-26-post-release-fixes-implementation.md
mutx-macros/: Cargo.toml
mutx-macros/src/: lib.rs
src/: backup.rs  error.rs  housekeep.rs  lib.rs  lock.rs  main.rs  write.rs
src/cli/: args.rs  housekeep_command.rs  mod.rs  (+1 more)
tests/: backup_atomic_test.rs  backup_format_test.rs  backup_suffix_test.rs  backup_test.rs  cli_args_test.rs  cli_args_validation_test.rs  cli_follow_symlinks_help_test.rs  cli_housekeep_subcommands_test.rs  cli_housekeep_test.rs  cli_write_subcommand_test.rs  cli_write_test.rs  duration_parsing_test.rs  end_to_end_test.rs  error_classification_test.rs  exit_codes_test.rs  housekeep_dry_run_output_test.rs  housekeep_suffix_validation_test.rs  housekeep_symlink_test.rs  housekeep_test.rs  housekeep_toctou_test.rs  integration_lock_write_test.rs  lock_backoff_test.rs  lock_path_test.rs  lock_race_condition_test.rs  lock_test.rs  path_validation_test.rs  symlink_security_test.rs  write_backup_suffix_validation_test.rs  write_test.rs
(+8 files in other folders)
