[package]
name = "mutx"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Aaron Bassett"]
description = "Atomic file writes with process coordination through file locking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aaronbassett/mutx"
keywords = ["atomic", "file", "lock", "cli"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "mutx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
atomic-write-file = "0.2"
fs2 = "0.4"
anyhow = "1.0"
libc = "0.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
